# Spellcheck

./: Spellcheck.cabal
src/: Spellcheck.hs  Trie.hs
