name:                Spellcheck
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
author:              Tom Boettcher
maintainer:          tboett@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8
stability:           experimental

library
  hs-source-dirs:   src
  ghc-options:      -Wall -O2
  exposed-modules:  Spellcheck
  other-modules:    Trie
  build-depends:    base == 4.5.*,
                    containers,
                    array == 0.4.0.0
